# langchain-practice

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
common/: llm.py
health/: router.py
parallel_content_generator_api/: router.py  schema.py  workflow.py
parallel_content_generator_api/prompts/: hastag.txt  linkedin.txt  tweet.txt
query_router_api/: router.py  schema.py  workflow.py
query_router_api/prompts/: classify.txt  coding.txt  general.txt  math.txt
resume_parser/: router.py  schema.py  workflow.py
resume_parser/prompts/: parse_resume.txt
self_correcting_output_api/: router.py  schema.py  workflow.py
self_correcting_output_api/prompts/: answer.txt  review.txt  rewrite.txt
smart_text_toolkit/: router.py  schema.py  workflow.py
smart_text_toolkit/prompts/: summarize.txt  tone_shift.txt  translate.txt
